--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@types/invariant": "^2.2.37",
+    "axios": "^1.9.0",
+    "iconv-lite": "^0.6.3",
+    "invariant": "^2.2.4",
     "react": "19.0.0",
     "react-native": "0.79.1",
+    "react-native-cheerio": "^1.0.0-rc.4",
     "react-native-mmkv": "^3.2.0",
     "react-native-paper": "^5.13.5",
     "react-native-safe-area-context": "^5.4.0",
