--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-paper": "^5.13.5",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
