--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-cheerio": "^1.0.0-rc.4",
+    "react-native-fs": "^2.20.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-paper": "^5.13.5",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
