--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "react": "19.0.0",
     "react-native": "0.79.1",
     "react-native-cheerio": "^1.0.0-rc.4",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.26.0",
     "react-native-mmkv": "^3.2.0",
     "react-native-paper": "^5.13.5",
+    "react-native-reanimated": "^3.18.0",
     "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.10.0",
