--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "^4.10.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-webview": "^13.15.0"
+    "react-native-webview": "^13.15.0",
+    "react-navigation-header-buttons": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
